style: fix menu z-index

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 .menu_wrapper {
   display: flex;
